Changelog:
16/01/2012 - Updated local IMDB string, moved Genre to official imdb.common. Tuned Bing search with (film %date%)
05/09/2011 - Tuning of year & originaltitle regexp
11/08/2011 - added "" to bing search, fixed original title and mpaa fields.
07/08/2011 - updated main scraper to use new MoviePlayer layout .
07/08/2011 - Removed optional IMDB, now it's used by default to retrieve all data except plot,tagline,outline,fanart and poster.
07/08/2011 - Commit test.
14/07/2011 - Fixed IMDb missing stuff and some cosmetics.
13/07/2011 - Added Results per page and "Year" option in settings, but it's best to keep it off.
Optimized the cache for IMDb and tmdb and other fixes
09/07/2011 - Almost completely rewritten: Bing is now the default search engine, all the infos by default are taken from movieplayer.it the user will enable the other features. 
Many, many fixes.....
07/03/2011 - Fixed Google search results.
13/02/2011 - Fixed studio's logos retrieving only one studio from imdb.
25/10/2010 - Fixed Trailers (it was deleted by mistake)
23/10/2010 - Adjusted the MP search, but Google engine is better and more reliable as it doesn't need the exact movie name. So Google is the default again and we don't hammer MP site either. Fixed the .nfo url too (tnx to Spiff)
14/10/2010 - Finally added the movieplayer.it own search (they removed the base64 encoding). Added one option in settings for Google search and anothe rone to get just one or more Posters from MP. Added Polish Translation. The version bump now to 1.1.0 :P
29/09/2010 - Updated GetImdbStuff function to match IMDb latest site changes
28/08/2010 - Reduced movieplayer.it fanarts pages just to the summary one to improve speed
27/08/2010 - Changed the search string for better results. Version now is 1.0.9
10/08/2010bis - Added hungarian strings, fixed addon.xml order descprition new version now 1.0.8 one step fwd from xbmc repo as it should be
10/08/2010 - Created git repository new version is 1.07