@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.movieplayer.it"
        name="MoviePlayer.it"
-       version="1.3.2"
+       version="1.3.3"
        provider-name="KoTiX and Gulp">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
